--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "firebase": "^12.3.0",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
